--- a/utils.css
+++ b/utils.css
@@ -15,6 +15,11 @@
   src: url(./assets/fonts/HitmarkerNormal-Bold.woff2);
 }
 
+@font-face {
+  font-family: Hit-Regular;
+  src: url(./assets/fonts/HitmarkerText-Regular.woff2);
+}
+
 .global-texts-Cond {
   font-family: Hit-Cond;
   color: var(--primary-color);
