--- a/utils.css
+++ b/utils.css
@@ -30,5 +30,52 @@
   color: var(--primary-color);
 }
 
+/* .parallax--anchors {
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+  color: var(--primary-color);
+  font-family: Hit-Bold;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: var(--btn-background);
+    border-radius: 4px;
+    transition: box-shadow 0.5s ease, transform 0.2s ease;
+    will-change: transform;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0))
+      rotateY(var(--ry, 0)) translateZ(var(--tz, -12px));
+  }
+
+  &:hover::before {
+    background-image: url(./assets/img/CerberusBtnAnim.gif);
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  }
+
+  &::after {
+    position: relative;
+    display: inline-block;
+    content: attr(data-title);
+    transition: transform 0.2s ease;
+    font-weight: bold;
+    letter-spacing: 0.01em;
+    will-change: transform;
+    transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0))
+      rotateY(var(--ry, 0));
+  }
+} */
+
 ::-webkit-scrollbar {
+  display: none;
 }
