--- a/utils.css
+++ b/utils.css
@@ -76,6 +76,88 @@
   }
 } */
 
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.mc--container {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+  /* background-color: coral; */
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+  flex-direction: column;
+}
+
+.tipi-cod{
+  justify-content: center;
+  font-family: Hit-Bold;
+  font-size: 1vw;
+  color: #dadada;
+  position: absolute;
+  top: 72%;
+  right: 0.5%;
+  border-radius: 11px;
+  background-color: #f96800;
+  /* padding: .1vw; */
+  width: 7.5vw;
+  height: 3vw;
+  display: flex;
+  align-items: center;
+}
+
+.mc--child-1-top svg {
+  /* background-color: plum; */
+  width: fit-content;
+}
+
+.slider-image--banner{
+  object-fit: cover;
+  filter: brightness(0.7);
+}
+
+.mc--child-2-bottom {
+  /* background-color: pink; */
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  color: var(--primary-color);
+  padding-left: 1.5vw;
+}
+
+.mc--spn{
+  width: fit-content;
+  font-size: 1.6vw;
+  font-weight: 500;
+  font-family: Hit-Cond;
+}
+
+.mc--para {
+  font-weight: 100;
+  width: fit-content;
+  font-family: Hit-Cond;
+  font-size: 1.2vw;
+  width: 70%;
+}
+
+
 ::-webkit-scrollbar {
   display: none;
 }
