--- a/media.css
+++ b/media.css
@@ -82,6 +82,66 @@
   .mc--para {
     font-size: 1.8vw;
   }
+  /* --------------------------------------- */
+  .s6-title-con h1{
+    font-size: 8vw;
+  }
+  
+  #glass-container{
+    width: 95vw;
+    height: 80vh;
+    position: relative;
+    overflow: hidden;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1vw;
+    background-image: url('./assets/img/CERBERUS_KA.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 
+    0 0 0 4px rgba(255, 255, 255, 0.1), /* Border-like shadow */
+    inset 0 2px 4px rgba(255, 255, 255, 0.1); /* Inset shadow */
+  }
+  
+  .g-con-glass-con{
+    height: 100%;
+    width: 100%;
+    background-color: #00000000;
+    backdrop-filter: blur(60px);
+    color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2vw;
+    align-items: center;
+  }
+  
+  .g-con-glass-con span{
+    font-size: 3.5vw;
+    font-family: Hit-Cond;
+    text-align: center;
+  }
+  
+  .fromer-btn-con{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .pre-btn{
+    padding: 1vw 3vw;
+    border-radius: 8px;
+    border: 1px solid var(--primary-background);
+    font-family: Hit-Cond;
+    transition: all .3s ease-in-out;
+    background-color: #ffffff43;
+    backdrop-filter: blur(30px);
+    letter-spacing: 1px;
+  }
 }
 
 @media only screen and (max-width: 425px) {
@@ -242,5 +302,67 @@
   .mc--para {
     font-size: 2.8vw;
     letter-spacing: 0.5px;
+  }
+
+  /* ------------- */
+  .s6-title-con h1{
+    font-size: 11vw;
+  }
+  
+  #glass-container{
+    width: 95vw;
+    height: 80vh;
+    position: relative;
+    overflow: hidden;
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1vw;
+    background-image: url('./assets/img/CERBERUS_KA.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 
+    0 0 0 4px rgba(255, 255, 255, 0.1), /* Border-like shadow */
+    inset 0 2px 4px rgba(255, 255, 255, 0.1); /* Inset shadow */
+  }
+  
+  .g-con-glass-con{
+    height: 100%;
+    width: 100%;
+    background-color: #00000000;
+    backdrop-filter: blur(60px);
+    color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2vw;
+    align-items: center;
+  }
+  
+  .g-con-glass-con span{
+    font-size: 6.5vw;
+    font-family: Hit-Cond;
+    text-align: center;
+  }
+  
+  .fromer-btn-con{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+  
+  .pre-btn{
+    font-size: 3vw;
+    padding: 1vw 3vw;
+    border-radius: 8px;
+    border: 1px solid var(--primary-background);
+    font-family: Hit-Cond;
+    transition: all .3s ease-in-out;
+    background-color: #ffffff43;
+    backdrop-filter: blur(30px);
+    letter-spacing: 1px;
   }
 }
