--- a/utils.css
+++ b/utils.css
@@ -39,6 +39,29 @@
   pointer-events: none;
 }
 
+#loader {
+  z-index: 9999;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  background-color: var(--secondary-background);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+#loader-svg-con {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+#loader-svg-con svg {
+  scale: 0.3;
+}
+
 .global-texts-Cond {
   font-family: Hit-Cond;
   color: var(--primary-color);
@@ -132,3 +155,114 @@
 ::-webkit-scrollbar {
   display: none;
 }
+/* !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! */
+
+/* 
+@-webkit-keyframes animate-svg-fill-1 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+@keyframes animate-svg-fill-1 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+.svg-elem-1 {
+  -webkit-animation: animate-svg-fill-1 3s
+    cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s both;
+  animation: animate-svg-fill-1 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.8s
+    both;
+}
+
+@-webkit-keyframes animate-svg-fill-2 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+@keyframes animate-svg-fill-2 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+.svg-elem-2 {
+  -webkit-animation: animate-svg-fill-2 3s
+    cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.9s both;
+  animation: animate-svg-fill-2 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) 0.9s
+    both;
+}
+
+@-webkit-keyframes animate-svg-fill-3 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+@keyframes animate-svg-fill-3 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(255, 255, 255);
+  }
+}
+
+.svg-elem-3 {
+  -webkit-animation: animate-svg-fill-3 3s
+    cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s both;
+  animation: animate-svg-fill-3 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1s
+    both;
+}
+
+@-webkit-keyframes animate-svg-fill-4 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(249, 104, 0);
+  }
+}
+
+@keyframes animate-svg-fill-4 {
+  0% {
+    fill: transparent;
+  }
+
+  100% {
+    fill: rgb(249, 104, 0);
+  }
+}
+
+.svg-elem-4 {
+  -webkit-animation: animate-svg-fill-4 3s
+    cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.1s both;
+  animation: animate-svg-fill-4 3s cubic-bezier(0.785, 0.135, 0.15, 0.86) 1.1s
+    both;
+}
+ */
